# schoolmanagement_api

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  locustfile.py  pyproject.toml  requirement.txt
app/: .env  crud.py  database.py  main.py  model.py  schemas.py  seeder.py
app/router/: admin.py  auth.py  notifications.py  students.py  teachers.py
app/routers/: admin.py  notifications.py  students.py  teachers.py
