[tool.poetry]
name = "school_app"
version = "0.1.0"
description = "school_app"
authors = ["vishal@school.com"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

pandas = ">=2.3.3,<3.0.0"
fastapi = ">=0.121.1,<0.122.0"
uvicorn = { extras = ["standard"], version = ">=0.38.0,<0.39.0" }
sqlalchemy = { extras = ["asyncio"], version = ">=2.0.44,<3.0.0" }
python-dotenv = ">=1.2.1,<2.0.0"
python-jose = { extras = ["cryptography"], version = ">=3.5.0,<4.0.0" }
passlib = { extras = ["bcrypt"], version = ">=1.7.4,<2.0.0" }
python-multipart = ">=0.0.20,<0.0.21"
psycopg2-binary = ">=2.9.11,<3.0.0"
asyncpg = ">=0.31.0,<0.32.0"
argon2-cffi = ">=25.1.0,<26.0.0"
email-validator = ">=2.3.0,<3.0.0"
locust = ">=2.17.0,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
